k8s/namespace.yaml
# SPDX-FileCopyrightText: 2026 Philippe Vollenweider
# SPDX-License-Identifier: AGPL-3.0-only

apiVersion: v1
kind: Namespace
metadata:
  name: benevoles
