k8s/service.yaml
# SPDX-FileCopyrightText: 2026 Philippe Vollenweider
# SPDX-License-Identifier: AGPL-3.0-only

apiVersion: v1
kind: Service
metadata:
  name: benevoles-app
  namespace: benevoles
spec:
  selector:
    app: benevoles-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
